# customer-base-analysis

./: .buildinfo  .gitignore  .lintstagedrc.json  01-analyse_exploratoire.ipynb  01-presentation.ipynb  02-analyse_exploratoire.ipynb  02-nettoyage.ipynb  03-feature_engineering.ipynb  03-nettoyage.ipynb  04-feature_engineering.ipynb  04-visualisation.ipynb  05-analyse_factorielle.ipynb  05-visualisation.ipynb  06-anova.ipynb  06-transformation_donnees.ipynb  07-analyse_multivariee.ipynb  07-clustering.ipynb  08-classification.ipynb  08-regressions.ipynb  08a-refonte-regressions.ipynb  08a-regressions.ipynb  08b-bilan-regression.ipynb  09-autres_modeles.ipynb  09-classification.ipynb  1-nettoyage.ipynb  10-experimentations.ipynb  2-feature_engineering.ipynb  3-visualisation.ipynb  4-test_hypotheses.ipynb  5-transformation_donnees.ipynb  6-analyse_multivariee.ipynb  8-autres_modeles.ipynb  README.html  README.md  expose-regression.ipynb  exposé.ipynb  genindex.html  index.html  jules-ouverture-csv.ipynb  objects.inv  (+7 more)
.husky/: pre-commit
_modules/: index.html
_sources/: README.md
assets/: README.md
data/: clusters-kmeans3.csv  clusters-kmeans4.csv  composantes_acm.csv  composantes_acp.csv  data-cleaned-feature-engineering.csv  data-cleaned.csv  data-transformed.csv
docstring/: modules.html  src.html
notebooks/: 01-analyse-exploratoire.html  02-nettoyage.html  03-feature-engineering.html  04-visualisation.html  05-analyse-factorielle.html  06-anova.html  07-clustering.html  08-regressions.html  08a-refonte-regressions.html  08b-bilan-regression.html  (+2 more)
(+43 files in other folders)
