[tool.poetry]
name = "projet-transverse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
black = {extras = ["jupyter"], version = "^22.12.0"}
jupyter = "^1.0.0"
numpy = "^1.24.1"
pandas = "^1.5.3"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
scikit-learn = "^1.2.1"
nbdev = "^2.3.12"
statsmodels = "^0.13.5"
mlxtend = "^0.21.0"
xgboost = "^1.7.4"
prince = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
